# Blinq-Messenger

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  _headers  app.rc  chatwindow.cpp  chatwindow.h  help.html  index.html  internetrelayservice.cpp  internetrelayservice.h  lanchatservice.cpp  lanchatservice.h  main.cpp  mainwindow.cpp  mainwindow.h  publicchatwindow.cpp  publicchatwindow.h  resources.qrc  robots.txt  settingsdialog.cpp  settingsdialog.h  sitemap.xml  update.json  windowsmediawatcher.cpp  windowsmediawatcher.h
app/: app.js  index.html  manifest.webmanifest  styles.css  sw.js
deploy/blinq-server/: blinq-server.service  install-vps.sh  package.json  server.js
deploy/windows/: BlinqMessenger.iss  license.txt  package-release.cmd  package-release.ps1
